--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1548,7 +1548,7 @@ Assumptions:
 ::: {style="font-size:80%;"}
 - Judges' mean latent biases across groups are assigned **weakly informative priors**, reflecting no directional preference in group-level means, i.e., $\beta_{ZJd[g=1]} = \beta_{ZJd[g=2]} = \beta_{ZJd[g=3]} \sim normal(0, 0.3)$,
 - Due to the $[-1,1]$ range in the residuals [@Pollitt_2012a, pp. 164; @Pollitt_2012b, pp. 289], the between-judge residual variability $(sd)$ is assigned a **highly informative exponential prior** with an average of $\lambda_{1}^{-1}=50^{-1}$ and a variance of $\lambda_{1}^{-2}=50^{-2}$. This reflects the **strong belief** in the absence of systematic judges biases,
-- For similar reasons, the within-judge residual variability $(sigma)$ is assigned a **highly informative exponential prior** with an average of $\lambda_{2}^{-1}=50^{-1}$ and a variance of $\lambda_{2}^{-2}=50^{-2}$. This reflects the expectation of a greater (though still narrow) unexplained residual variability unrelated to systematic judge biases, i.e., $\lambda_{1}^{-1} < \lambda_{2}^{-1}$
+- For similar reasons, the within-judge residual variability $(sigma)$ is assigned a **highly informative exponential prior** with an average of $\lambda_{2}^{-1}=25^{-1}$ and a variance of $\lambda_{2}^{-2}=25^{-2}$. This reflects the expectation of a greater (though still narrow) unexplained residual variability unrelated to systematic judge biases, i.e., $\lambda_{1}^{-1} < \lambda_{2}^{-1}$
 :::
 :::
 :::
@@ -1748,7 +1748,7 @@ The **RMSE plots** indicates that,
 
 ## 5.1.2.1 Data modeling: The CBTL analysis {style="font-size:80%;"}
 
-Second, we use the refitted BTL model (without *misfits*) and the specified priors to fit the models in Steps $2$ and $3$, completing the *CBTL analysis*.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {.fragment style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -1765,7 +1765,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.1 Data modeling: The CBTL analysis {style="font-size:80%;"}
 
-Second, we use the refitted BTL model (without *misfits*) and the specified priors to fit the models in Steps $2$ and $3$, completing the *CBTL analysis*.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -1787,7 +1787,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.1 Data modeling: The CBTL analysis {style="font-size:80%;"}
 
-Second, we use the refitted BTL model (without *misfits*) and the specified priors to fit the models in Steps $2$ and $3$, completing the *CBTL analysis*.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -1809,7 +1809,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.1 Data modeling: The CBTL analysis {style="font-size:80%;"}
 
-Second, we use the refitted BTL model (without *misfits*) and the specified priors to fit the models in Steps $2$ and $3$, completing the *CBTL analysis*.
+Fourth, we check if the models still shows signs of 'trouble'.
 
 ::: {style="font-size:80%;"}
 The **influential points plots** indicates that, 
@@ -1970,7 +1970,7 @@ The **RMSE plots** indicates that,
 
 ## 5.1.2.2.1 Data modeling: The ITCJ analysis 1 {style="font-size:80%;"}
 
-Second, we fit the **first** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {.fragment style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -1990,7 +1990,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.1 Data modeling: The ITCJ analysis 1 {style="font-size:80%;"}
 
-Second, we fit the **first** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2015,7 +2015,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.1 Data modeling: The ITCJ analysis 1 {style="font-size:80%;"}
 
-Second, we fit the **first** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2040,7 +2040,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.1 Data modeling: The ITCJ analysis 1 {style="font-size:80%;"}
 
-Second, we fit the **first** ITCJ model to the data using the specified priors.
+Fourth, we check if the model still shows signs of 'trouble'
 
 ::: {style="font-size:80%;"}
 The **influential points plots** indicates that, 
@@ -2209,7 +2209,7 @@ The **RMSE plots** indicates that,
 
 ## 5.1.2.2.2 Data modeling: The ITCJ analysis 2 {style="font-size:80%;"}
 
-Second, we fit the **second** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {.fragment style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2229,7 +2229,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.2 Data modeling: The ITCJ analysis 2 {style="font-size:80%;"}
 
-Second, we fit the **second** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2254,7 +2254,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2 Data modeling: The ITCJ analysis 2 {style="font-size:80%;"}
 
-Second, we fit the **second** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2279,7 +2279,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2 Data modeling: The ITCJ analysis 2 {style="font-size:80%;"}
 
-Second, we fit the **second** ITCJ model to the data using the specified priors.
+Fourth, we check if the model still shows signs of 'trouble'
 
 ::: {style="font-size:80%;"}
 The **influential points plots** indicates that, 
@@ -2449,7 +2449,7 @@ The **RMSE plots** indicates that,
 
 ## 5.1.2.2.3 Data modeling: The ITCJ analysis 3 {style="font-size:80%;"}
 
-Second, we fit the **third** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {.fragment style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2469,7 +2469,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.3 Data modeling: The ITCJ analysis 3 {style="font-size:80%;"}
 
-Second, we fit the **third** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2494,7 +2494,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.3 Data modeling: The ITCJ analysis 3 {style="font-size:80%;"}
 
-Second, we fit the **third** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2519,7 +2519,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.3 Data modeling: The ITCJ analysis 3 {style="font-size:80%;"}
 
-Second, we fit the **third** ITCJ model to the data using the specified priors.
+Fourth, we check if the model still shows signs of 'trouble'
 
 ::: {style="font-size:80%;"}
 The **influential points plots** indicates that, 
@@ -2689,7 +2689,7 @@ The **RMSE plots** indicates that,
 
 ## 5.1.2.2.4 Data modeling: The ITCJ analysis 4 {style="font-size:80%;"}
 
-Second, we fit the **fourth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {.fragment style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2709,7 +2709,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.4 Data modeling: The ITCJ analysis 4 {style="font-size:80%;"}
 
-Second, we fit the **fourth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2734,7 +2734,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.4 Data modeling: The ITCJ analysis 4 {style="font-size:80%;"}
 
-Second, we fit the **fourth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2759,7 +2759,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.4 Data modeling: The ITCJ analysis 4 {style="font-size:80%;"}
 
-Second, we fit the **fourth** ITCJ model to the data using the specified priors.
+Fourth, we check if the model still shows signs of 'trouble'
 
 ::: {style="font-size:80%;"}
 The **influential points plots** indicates that, 
@@ -2935,7 +2935,7 @@ The **RMSE plots** indicates that,
 
 ## 5.1.2.2.5 Data modeling: The ITCJ analysis 5 {style="font-size:80%;"}
 
-Second, we fit the **fifth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {.fragment style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2955,7 +2955,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.5 Data modeling: The ITCJ analysis 5 {style="font-size:80%;"}
 
-Second, we fit the **fifth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -2980,7 +2980,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.5 Data modeling: The ITCJ analysis 5 {style="font-size:80%;"}
 
-Second, we fit the **fifth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -3005,7 +3005,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.5 Data modeling: The ITCJ analysis 5 {style="font-size:80%;"}
 
-Second, we fit the **fifth** ITCJ model to the data using the specified priors.
+Fourth, we check if the model still shows signs of 'trouble'
 
 ::: {style="font-size:80%;"}
 The **influential points plots** indicates that, 
@@ -3183,7 +3183,7 @@ The **RMSE plots** indicates that,
 
 ## 5.1.2.2.6 Data modeling: The ITCJ analysis 6 {style="font-size:80%;"}
 
-Second, we fit the **sixth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {.fragment style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -3203,7 +3203,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.6 Data modeling: The ITCJ analysis 6 {style="font-size:80%;"}
 
-Second, we fit the **sixth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -3228,7 +3228,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.6 Data modeling: The ITCJ analysis 6 {style="font-size:80%;"}
 
-Second, we fit the **sixth** ITCJ model to the data using the specified priors.
+Third, we assess the in-sample predictive accuracy of the model.
 
 ::: {style="font-size:80%;"}
 The **posterior predictive plots** indicates that, 
@@ -3253,7 +3253,7 @@ The **posterior predictive plots** indicates that,
 
 ## 5.1.2.2.6 Data modeling: The ITCJ analysis 6 {style="font-size:80%;"}
 
-Second, we fit the **sixth** ITCJ model to the data using the specified priors.
+Fourth, we check if the model still shows signs of 'trouble'
 
 ::: {style="font-size:80%;"}
 The **influential points plots** indicates that, 
@@ -3275,6 +3275,18 @@ The **influential points plots** indicates that,
 
 ## 5.1.3 Model comparison {style="font-size:80%;"}
 
+Finally, we assess the approximate out-of-sample fit of the models.
+
+::: {style="font-size:80%;"}
+The PSIS model comparison indicates that, 
+
+::: {#fig-model_comparison}
+
+![](/figures/ITCJ_analysis/cropped/5_ITCJ_model_comparison.png){width=70%}
+
+*ITCJ analysis*, model comparison. *Left panel* shows all models. *Right panel* smaller set of models.
+:::
+:::
 
 <!-- ######################################### -->
 
