--- a/presentation.qmd
+++ b/presentation.qmd
@@ -3314,7 +3314,8 @@ sapply(librerias, require, character.only=T)
 
 dir = '/home/josema/Desktop/1. Work/1 research/PhD Antwerp/#thesis/paper3/paper3_presentation'
 
-var_int = c('variable','value','mean','median','sd','q5','q95','rmse')
+var_int = c('variable','value','mean','median','sd','q5','q95','rmse') 
+# ROPE_lower, ROPE_upper, ROPE_prec
 ```
 
 Also, we compare and interpret the parameter estimates: 
@@ -3324,7 +3325,8 @@ Also, we compare and interpret the parameter estimates:
 #| output: false
 param_CBTL = read.csv( 
   file = file.path( dir,'summaries','3_2_CBTL_estimated_parameter.csv' ) )
-param_CBTL[,-1] = round( param_CBTL[,-1], 3)
+# param_CBTL[,-1] = round( param_CBTL[,-1], 3)
+param_CBTL
 
 idx1 = with( param_CBTL, str_detect(variable,' - ') )
 idx2 = with( param_CBTL, 
@@ -3352,6 +3354,11 @@ param_CBTL[!(idx1 | idx2), var_int] |>
   gt() |>
   opt_table_font( size=12 ) |>
   fmt_number( columns=everything(), decimals=2, use_seps=F ) |>
+  # cols_label(
+  #   ROPE_lower = "ropeL",
+  #   ROPE_upper = "ropeU",
+  #   ROPE_prec = "ropeP"
+  # ) |>
   tab_header( title = "Parameter table" ) |>
   tab_footnote(
     footnote = 'No equivalent parameter in original simulation.',
@@ -3363,6 +3370,11 @@ param_ITCJ[!(idx3 | idx4), var_int] |>
   gt() |>
   opt_table_font( size=12 ) |>
   fmt_number( columns=everything(), decimals=2, use_seps=F ) |>
+  # cols_label(
+  #   ROPE_lower = "ropeL",
+  #   ROPE_upper = "ropeU",
+  #   ROPE_prec = "ropeP"
+  # ) |>
   tab_header( title = "Parameter table" )
 ```
 
@@ -3386,6 +3398,11 @@ param_CBTL[idx1, var_int] |>
   gt() |>
   opt_table_font( size=12 ) |>
   fmt_number( columns=everything(), decimals=2, use_seps=F ) |>
+  # cols_label(
+  #   ROPE_lower = "ropeL",
+  #   ROPE_upper = "ropeU",
+  #   ROPE_prec = "ropeP"
+  # ) |>
   tab_header( title = "Contrast table" )
 ```
 
@@ -3394,6 +3411,11 @@ param_ITCJ[idx3, var_int] |>
   gt() |>
   opt_table_font( size=12 ) |>
   fmt_number( columns=everything(), decimals=2, use_seps=F ) |>
+  # cols_label(
+  #   ROPE_lower = "ropeL",
+  #   ROPE_upper = "ropeU",
+  #   ROPE_prec = "ropeP"
+  # ) |>
   tab_header( title = "Contrast table" )
 ```
 
